--- a/meta/16-2.md
+++ b/meta/16-2.md
@@ -54,4 +54,4 @@ Eine komplette Übersicht sowie weitere Einzelheiten zu den Beteiligungsverfahre
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 V1.1.4: Förderung einer barrierefreien, inklusiven und geschlechterunabhängigen Bürgerbeteiligung<br>
 <br>
-<b>Ingolstadtspezifischer Indikator</b>
+<b>BNK-Indikator</b>
