--- a/meta/7-1.md
+++ b/meta/7-1.md
@@ -57,4 +57,4 @@ Stand: 31.12.2023<br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 K1.2: Ausbau von erneuerbaren Energien, insbesondere Erzeugung von regenerativem Strom vor Ort<br>
 <br>
-<b>Ingolstadtspezifischer Indikator</b>
+<b>Kernindikator BNK</b>
