--- a/meta/13-2.md
+++ b/meta/13-2.md
@@ -47,4 +47,4 @@ Die CO2-Bilanz wird momentan alle 2 Jahre aktualisiert, da auf dieser Ebene jäh
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 K1.1: Reduktion von Treibhausgasemissionen: klimaneutral stadtweit bis 2035<br>
 <br>
-<b>Ingolstadtspezifischer Indikator</b>
+<b>BNK-Indikator</b>
