--- a/meta/7-3.md
+++ b/meta/7-3.md
@@ -46,4 +46,4 @@ Unter den acht größten Städten in Bayern liegt Ingolstadt auf Platz 1, d. h. 
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 N4.1: Steigerung umweltfreundlicher und sicherer Mobilität<br>
 <br>
-<b>Ingolstadtspezifischer Indikator</b>
+<b>BNK-Indikator</b>
