--- a/meta/13-2.md
+++ b/meta/13-2.md
@@ -45,6 +45,6 @@ Die CO2-Bilanz wird momentan alle 2 Jahre aktualisiert, da auf dieser Ebene jäh
 <b>Erläuterung: GHD-Emissionen sind alle Emissionen des Sektor Gewerbe, Handel, Dienstleistungen und übrige Verbraucher. Die Stadtverwaltung Ingolstadt zählt ebenfalls zum Sektor GHD, wird in dieser Grafik aber nochmal separat aufgeführt.</b><br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-K1.1: Reduktion von Treibhausgasemissionen: klimaneutral stadtweit bis 2035<br>
+K1.1: Reduktion von Treibhausgasemissionen: klimaneutral stadtweit bis 2035 und I2.2: Klimaneutrale Stadtverwaltung (bis 2030)<br>
 <br>
 <b>BNK-Indikator</b>
