--- a/meta/12-1.md
+++ b/meta/12-1.md
@@ -58,4 +58,4 @@ Abfallmenge der privaten Haushalte in kg je Einwohner/-in unterteilt in die vers
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 K4.2: Förderung der Müllvermeidung und Mülltrennung<br>
 <br>
-<b>BNK-Indikator</b>
+<b>BNK-Kernindikator</b>
