--- a/meta/12-5.md
+++ b/meta/12-5.md
@@ -42,4 +42,4 @@ Hierbei sind Sammlungen des gelben Sackes und der gelben Tonne zusammengefasst.<
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 K4.2: Förderung der Müllvermeidung und Mülltrennung<br>
 <br>
-<b>Ingolstadtspezifischer Indikator</b>
+<b>BNK-Indikator</b>
