--- a/meta/3-5.md
+++ b/meta/3-5.md
@@ -39,4 +39,4 @@ Im Messwertarchiv steht eine umfangreiche Sammlung der kontinuierlich erfassten 
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt:</b><br>
 N2.1: Reduzierung der gesundheitlichen physischen und psychischen Belastung und Sicherstellung von ausreichenden Präventionsangeboten<br>
 <br>
-<b>BNK-Indikator</b>
+<b>BNK-Kernindikator</b>
