--- a/meta/11-8.md
+++ b/meta/11-8.md
@@ -40,4 +40,4 @@ Dieser Indikator zeigt die Anteile der Siedlungs- und Verkehrsfläche sowie der 
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 K2.3: Vernetzung, Entwicklung und Erhalt schützenswerter Flächen<br>
 <br>
-<b>BNK-Indikator</b>
+<b>BNK-Kernindikator</b> (Flächenneuinanspruchname)
