--- a/meta/11-12.md
+++ b/meta/11-12.md
@@ -36,4 +36,4 @@ Dieser Indikator weist die Naherholungsflächen mit Wald in Hektar (ha) je 1000 
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 K2.6: Naherholung mit ökologischen Aspekten vereinen<br>
 <br>
-<b>Ingolstadtspezifischer Indikator</b>
+<b>BNK-Kernindikator</b>
