--- a/meta/1-1.md
+++ b/meta/1-1.md
@@ -38,4 +38,4 @@ Der Indikator beschreibt mehrere Formen der Unterbringung. Dazu gehören die Nut
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt:</b><br> 
 V1.1.1: Unterstützung von Menschen in besonderen Lebenslagen<br>
 <br>
-<b>Ingolstadtspezifischer Indikator</b>
+<b>BNK-Kernindikator</b>
