--- a/meta/11-5.md
+++ b/meta/11-5.md
@@ -36,4 +36,4 @@ Dieser Indikator zeigt die Zahl der Verkehrsunfälle mit Personenschaden sowie b
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 N4.4: Verbesserung der Verkehrssicherheit<br>
 <br>
-<b>Ingolstadtspezifischer Indikator</b>
+<b>BNK-Kernindikator</b>
