--- a/meta/11-15.md
+++ b/meta/11-15.md
@@ -36,4 +36,4 @@ Die Pkw-Dichte in der Stadt Ingolstadt ist aktuell höher als in den anderen bay
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 N4.2: Reduktion des motorisierten Individualverkehrs<br>
 <br>
-<b>BNK-Indikator</b>
+<b>BNK-Kernindikator</b>
