--- a/meta/8-1.md
+++ b/meta/8-1.md
@@ -40,4 +40,4 @@ Quelle: <a href="https://www.bundesregierung.de/breg-de/schwerpunkte/entlastung-
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 V1.4: Armutsbekämpfung<br>
 <br>
-<b>Ingolstadtspezifischer Indikator</b>
+<b>BNK-Indikator</b>
