--- a/meta/8-2.md
+++ b/meta/8-2.md
@@ -41,4 +41,4 @@ Dieser Indikator zeigt die sv-Beschäftigtenquote der in Ingolstadt Beschäftigt
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 N3.7: Sicherung einer qualitativ hochwertigen Beschäftigung<br>
 <br>
-<b>BNK-Indikator</b>
+<b>BNK-Kernindikator</b>
