--- a/meta/4-3.md
+++ b/meta/4-3.md
@@ -39,4 +39,4 @@ Anzahl der Kinder in öff. Kindertageseinrichtungen mit / ohne Migrationshinterg
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 B2.3: Förderung der Bildungsteilhabe / Bildungsgerechtigkeit und lebenslangem Lernen<br>
 <br>
-<b>Ingolstadtspezifischer Indikator</b>
+<b>BNK-Kernindikator</b>
