--- a/meta/11-10.md
+++ b/meta/11-10.md
@@ -44,4 +44,4 @@ Auf Grundlage dieser Berechnungen werden in den folgenden Jahren Maßnahmen zur 
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 N3.2: Umsetzung einer nachhaltigen und generationsgerechten Stadtplanung sowie Sicherstellung von Gemeinbedarfsflächen<br>
 <br>
-<b>Ingolstadtspezifischer Indikator</b>
+<b>BNK-Indikator</b>
