--- a/meta/16-7.md
+++ b/meta/16-7.md
@@ -42,4 +42,4 @@ Mehr Infos zu Wahlen in Ingolstadt auf <a href="https://www.ingolstadt.de/Rathau
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 V1.1.4: Förderung einer barrierefreien, inklusiven und geschlechterunabhängigen Bürgerbeteiligung<br>
 <br>
-<b>Ingolstadtspezifischer Indikator</b>
+<b>BNK-Indikator</b>
