--- a/meta/4-9.md
+++ b/meta/4-9.md
@@ -38,4 +38,4 @@ Die wohnortnahe Versorgung der Grundschüler/-innen in Bayern regelt die sogenan
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 B2.3: Förderung der Bildungsteilhabe / Bildungsgerechtigkeit und lebenslangem Lernen<br>
 <br>
-<b>BNK-Indikator</b><br>
+<b>BNK-Kernindikator</b><br>
