--- a/meta/3-7.md
+++ b/meta/3-7.md
@@ -39,4 +39,4 @@ Anzahl der Todesfälle von Personen unter 70 Jahren. Zwischen 2020 und 2022 ist 
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 N2.5: Ermöglichung einer guten Versorgung (generationenspezifische Angebote) <br>
 <br>
-<b>BNK-Indikator</b>
+<b>BNK-Kernindikator</b>
