--- a/meta/9-1.md
+++ b/meta/9-1.md
@@ -38,4 +38,4 @@ Dieser Indikator zeigt das Gründungssaldo in Ingolstadt nach Anzahl Gewerbean- 
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 W3.1: Förderung von Existenzgründungen<br>
 <br>
-<b>Ingolstadtspezifischer Indikator</b>
+<b>BNK-Indikator</b>
