--- a/meta/17-2.md
+++ b/meta/17-2.md
@@ -36,4 +36,4 @@ Der Indikator zeigt die Anzahl der Projekte mit den Partnerstädten der Stadt In
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 V2.2: Interkommunale/r, überregionale/r und internationale/r Austausch und Zusammenarbeit<br>
 <br>
-<b>Ingolstadtspezifischer Indikator</b>
+<b>BNK-Indikator</b>
