--- a/meta/17-1.md
+++ b/meta/17-1.md
@@ -36,4 +36,4 @@ Größtes Projekt ist die Projektpartnerschaft mit der Gemeinde Legmoin im westa
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 V2.3: Förderung und Pflege von Netzwerken und Partnerschaften<br>
 <br>
-<b>Ingolstadtspezifischer Indikator</b>
+<b>BNK-Kernindikator</b>
