--- a/meta/1-4-1.md
+++ b/meta/1-4-1.md
@@ -15,6 +15,8 @@ data_start_values:  # initialize the field to be shown
    value: Hilfe zum Lebensunterhalt
  - field: SGB XII 
    value: Grundsicherung
+ - field: SGB XII
+   value: Erwerbsminderungsrente
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
@@ -35,8 +37,9 @@ Personen, die die Altersgrenze erreicht haben und auf Dauer ihren Lebensunterhal
 <br>
 Vor dem Jahr 1947 geborene Personen erreichten die Altersgrenze mit 65 Jahren; für 1947 und später Geborene wird die Altersgrenze seit dem Jahr 2012 schrittweise auf 67 Jahre angehoben.<br>
 <br>
-Quelle: <a href="https://www.bmas.de/DE/Soziales/Rente-und-Altersvorsorge/Fakten-zur-Rente/Grundsicherung-im-Alter/grundsicherung-im-alter.html#:~:text=Grundsicherung%20im%20Alter%20erhalten%20alle,Einkommen%20von%20unter%20400%20Euro.">Bundesministerium für Arbeit und Soziales</a><br>
+Quelle: <a href="https://www.bmas.de/DE/Soziales/Sozialhilfe/Leistungen-der-Sozialhilfe/leistungen-der-sozialhilfe.html">Bundesministerium für Arbeit und Soziales</a><br>
 <br>
+Hier dargestellt sind die die Leistungen der Sozialhilfe für den Lebensunterhalt (3. und 4. Kapitel des SGB XII) zur Hilfe zum Lebensunterhalt und zur Grundsicherung im Alter und bei Erwerbsminderung.<br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt:</b><br>
 V1.4: Armutsbekämpfung<br>
 <br>
