--- a/meta/1-5.md
+++ b/meta/1-5.md
@@ -9,20 +9,18 @@ indicator_sort_order: 01-05-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Anzahl Empfänger/-innen von Erwerbsminderungsrente 
+computation_units: Prozent 
 data_start_values:  # initialize the field to be shown  
- - field: Geschlecht 
-   value: männlich
- - field: Geschlecht 
-   value: weiblich
- - field: Geschlecht 
-   value: gesamt
+ - field: Quote 
+   value: SGB II
+ - field: Quote 
+   value: SGB XII
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt
-computation_definitions: Empfänger/-innen von Erwerbsminderungsrente nach SGB XII
+computation_definitions: Anteil der Leistungsberechtigten nach dem SGB II oder SGB XII an der Gesamtbevölkerung
 
-SOURCE_TYPE: "Amt für Soziales der Stadt Ingolstadt"  # data source  
+SOURCE_TYPE: <a href="https://www.statistikdaten.bayern.de/genesis//online?operation=table&code=22131-001z&bypass=true&levelindex=1&levelid=1730294405031#abreadcrumb">Bayerisches Landesamt für Statistik - SGB XII</a>, <a href="https://www.statistikdaten.bayern.de/genesis//online?operation=table&code=12111-101z&bypass=true&levelindex=1&levelid=1730295943637#abreadcrumb">Bayerisches Landesamt für Statistik - Fortschreibung ZESNSUS</a>, <a href="https://statistik.arbeitsagentur.de/SiteGlobals/Forms/Suche/Einzelheftsuche_Formular.html?topic_f=sgbii-quoten">Bundesagentur für Arbeit</a> # data source  
 source_earliest_available_1: 2019
 source_periodicity_1: Jährlich
 
@@ -33,13 +31,14 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Die Erwerbsminderungsrente ist eine Rente für Menschen, die wegen Krankheit oder Unfall gar nicht mehr oder nur noch eingeschränkt arbeiten können. Sie soll den Wegfall des Erwerbseinkommens teilweise oder vollständig ausgleichen und einen angemessenen Lebensstandard ermöglichen. Betroffen sind jedes Jahr 170.000 Menschen, die ihren Job vor Erreichen des Rentenalters aufgeben müssen.<br>
+Der Indikator gibt den Anteil der Leistungsberechtigten nach dem SGB II und SGB XII (5. bis 9. Kapitel) an der Gesamtbevölkerung an. Seit 2020 werden die Leistungsempfänger von Eingliederungshilfe nach dem SGB IX in einer gesonderten Statistik erfasst und sind nicht mehr in der Zahl der Leistungsempfänger nach dem 5. bis 9. Kapitel enthalten. Daher sinkt auch die Quote ab 2020 stark.<br>
 <br>
-Unterschieden wird zwischen einer Rente wegen voller und teilweiser Erwerbsminderung. Vollständig erwerbsunfähig ist, wer für absehbare Zeit nicht in der Lage ist, mehr als drei Stunden täglich einer Arbeit nachzugehen. Teilweise erwerbsgemindert sind Personen, die nicht mehr als sechs Stunden täglich arbeiten können.<br> 
+Die SGB II-/SGB XII-Quote liefert wertvolle Informationen dazu, wie viele Menschen eine Förderung in Form der Mindestsicherung erhalten und Gefahr laufen, langfristig von
+Armut betroffen zu sein. Kommunen können Armut in ihren Aufgabenbereichen zwar nicht ursachenadäquat behandeln, doch sie sind mit den Konsequenzen von Armut konfrontiert
+und können auf die Lebenswirklichkeit sozioökonomisch benachteiligter Menschen Einfluss nehmen, insbesondere in den Bereichen Wohnen, Wohnumfeld / öffentlicher Raum, Mobilität und soziale Folgen der Armut.<br>
 <br>
-Die Erwerbsminderungsrente dient der Sicherung des Lebensunterhalts für den Zeitraum, in dem eine Person nicht arbeiten kann. Verbessert sich der Zustand so, dass Betroffene wieder ins Arbeitsleben eintreten können, erhalten sie daher keine Leistungen mehr. Man kann also auch aus der Erwerbsminderungsrente wieder in die Erwerbstätigkeit eintreten.<br> 
-<br>
-Quelle: <a href="https://www.bundesregierung.de/breg-de/themen/arbeit-und-soziales/rund-um-die-rente/faq-erwerbsminderungsrenten-2266870">Bundesregierung</a><br>
+Der Indikator zeigt die Hilfsbedürftigkeit benachteiligter Bevölkerungsgruppen in der Kommune auf. Er gibt keinen Hinweis darauf, wie hoch der Anteil der leistungsberechtigten
+Menschen ist, die die Hilfe tatsächlich in Anspruch nehmen.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt:</b><br>
 V1.4: Armutsbekämpfung<br>
