--- a/meta/1-4-1.md
+++ b/meta/1-4-1.md
@@ -20,7 +20,7 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: Empfänger/-innen von SGB XII (Hilfe zum Lebensunterhalt, Grundsicherung)
+computation_definitions: Empfänger/-innen von SGB XII (Hilfe zum Lebensunterhalt, Grundsicherung und bei Erwerbsminderung)
 
 SOURCE_TYPE:  "Amt für Soziales der Stadt Ingolstadt"  # data source
 source_earliest_available_1: 2019
