--- a/meta/1-5.md
+++ b/meta/1-5.md
@@ -43,4 +43,4 @@ Menschen ist, die die Hilfe tatsächlich in Anspruch nehmen.<br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt:</b><br>
 V1.4: Armutsbekämpfung<br>
 <br>
-<b>BNK-Indikator</b>
+<b>BNK-Kernindikator</b>
