--- a/meta/1-5.md
+++ b/meta/1-5.md
@@ -31,7 +31,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Der Indikator gibt den Anteil der Leistungsberechtigten nach dem SGB II und SGB XII (5. bis 9. Kapitel) an der Gesamtbevölkerung an. Seit 2020 werden die Leistungsempfänger von Eingliederungshilfe nach dem SGB IX in einer gesonderten Statistik erfasst und sind nicht mehr in der Zahl der Leistungsempfänger nach dem 5. bis 9. Kapitel enthalten. Daher sinkt auch die Quote ab 2020 stark.<br>
+Der Indikator gibt den Anteil der Leistungsberechtigten nach dem SGB II und SGB XII (5. bis 9. Kapitel) an der Gesamtbevölkerung an. Seit 2020 werden die Leistungsempfänger von Eingliederungshilfe nach dem SGB IX in einer gesonderten Statistik erfasst und sind nicht mehr in der Zahl der Leistungsempfänger nach dem 5. bis 9. Kapitel des SGB XII enthalten. Daher sinkt auch die Quote ab 2020 stark.<br>
 <br>
 Die SGB II-/SGB XII-Quote liefert wertvolle Informationen dazu, wie viele Menschen eine Förderung in Form der Mindestsicherung erhalten und Gefahr laufen, langfristig von
 Armut betroffen zu sein. Kommunen können Armut in ihren Aufgabenbereichen zwar nicht ursachenadäquat behandeln, doch sie sind mit den Konsequenzen von Armut konfrontiert
