--- a/meta/7-1.md
+++ b/meta/7-1.md
@@ -9,28 +9,28 @@ indicator_sort_order: 07-01-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: bar  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Watt und Watt / EW
+computation_units: kW  und kW / EW
 data_start_values:  # initialize the field to be shown  
  - field: Anlagenart
-   value: Biomasse in Watt
+   value: Biomasse in kW
  - field: Anlagenart
-   value: Biomasse in Watt/EW
+   value: Biomasse in kW/EW
  - field: Anlagenart 
-   value: Wasserkraft in Watt
+   value: Wasserkraft in kW
  - field: Anlagenart 
-   value: Wasserkraft in Watt/EW
+   value: Wasserkraft in kW/EW
  - field: Anlagenart 
-   value: Photovoltaik in Watt
+   value: Photovoltaik in kW
  - field: Anlagenart 
-   value: Photovoltaik in Watt/EW
+   value: Photovoltaik in kW/EW
  - field: Anlagenart 
-   value: Gesamt in Watt
+   value: Gesamt in kW
  - field: Anlagenart 
-   value: Gesamt in Watt/EW
+   value: Gesamt in kW/EW
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: Strom aus Biomasse, Wasserkraft und Photovoltaik in Watt pro Einwohner/-in
+computation_definitions: Strom aus Biomasse, Wasserkraft und Photovoltaik in kW und kW pro Einwohner/-in
 
 SOURCE_TYPE: <a href="https://sw-i.de/strom/">Stadtwerke Ingolstadt</a> # data source  
 source_earliest_available_1: 2018
@@ -45,7 +45,7 @@ reporting_status: complete
 ---
 Strom aus erneuerbaren Energien wird im Stadtgebiet Ingolstadt aus 5 Biomasseanlagen, 3 Wasserkraftanlagen und 5366 Photovoltaikanlagen gewonnen. Windkraftanlagen sind keine im Stadtgebiet Ingolstadt installiert.<br>
 <br>
-<b>Photovoltaik:</b> Mit einer installierten Leistung von knapp elf Megawatt erreicht der Zubau 2023 ein Rekordhoch und löst damit das bislang stärkste Jahr 2011 mit knapp unter neun Megawatt neu installierter Leistung ab. Insgesamt liegt die Photovoltaik-Leistung in Ingolstadt damit bei etwa 68 Megawatt. Bezogen auf die Bevölkerung ist Ingolstadt mit 0,47 Kilowatt je Einwohner im Vergleich mit vergleichbaren bayerischen Großstädten einer der Spitzenreiter. Erreicht werden konnte das Rekordergebnis vor allem durch sehr gut angenommene Förderprogramme.<br>
+<b>Photovoltaik:</b> Mit einer installierten Leistung von knapp elf Megawatt erreicht der Zubau 2023 ein Rekordhoch und löst damit das bislang stärkste Jahr 2011 mit knapp unter neun Megawatt neu installierter Leistung ab. Insgesamt liegt die Photovoltaik-Leistung in Ingolstadt damit bei etwa 68 Megawatt. Bezogen auf die Bevölkerung ist Ingolstadt mit 0,48 Kilowatt je Einwohner im Vergleich mit vergleichbaren bayerischen Großstädten einer der Spitzenreiter. Erreicht werden konnte das Rekordergebnis vor allem durch sehr gut angenommene Förderprogramme.<br>
 <br>
 <b>Biomasse</b> sind alle Energieträger, die ihre Energie durch die Sonne bekommen. Als Biomasse wird  Holz, Haus- und Gartenabfälle, Grünabfälle, organisches Material und industrielle Bioabfälle (z.B. aus der Lebensmittelindustrie) bezeichnet. Biomasse zählt zu den Erneuerbaren Energien, da bei der Energiegewinnung kein zusätzliches CO2 ausgestoßen wird. Pflanzen nehmen während ihres Wachstums CO2 aus der Atmosphäre auf. Wird die Biomasse verbrannt oder vergoren, wird genau diese Menge an Kohlenstoffdioxid wieder freigegeben - somit bleibt es ein geschlossener CO2-Kreislauf.<br>
 <br>
