--- a/meta/7-1.md
+++ b/meta/7-1.md
@@ -9,7 +9,7 @@ indicator_sort_order: 07-01-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: bar  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: kW  und kW / EW
+computation_units: kW
 data_start_values:  # initialize the field to be shown  
  - field: Anlagenart
    value: Biomasse in kW
