--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -15,7 +15,7 @@
 3-2-title: Anzahl und Art Präventionsangebote
 3-3-title: Ärzteversorgung
 3-4-title: Fachärzte/-innen-Versorgung
-3-5-title: Immission von Luftschadstoffen
+3-5-title: Luftschadstoffbelastung
 3-6-title: Offene Stellen und Ausbildungen von medizinischem Fachpersonal
 3-7-title: Vorzeitige Sterblickeit
 3-8-title: Wohnungsnahe Grundversorgung - Krankenhaus
