--- a/meta/11-12.md
+++ b/meta/11-12.md
@@ -9,16 +9,16 @@ indicator_sort_order: 11-12-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Hektar (ha)
+computation_units: m²
 data_start_values:  # initialize the field to be shown  
  - field: Naherholungsflächen 
-   value: ha / 1000 EW 
+   value: m² / EW 
  - field: Naherholungsflächen 
-   value: ha gesamt
+   value: m² gesamt
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: Naherholungsflächen (mit Wald) in Hektar je 1000 Einwohner/-innen
+computation_definitions: Naherholungsflächen (mit Wald) in m² gesamt und je Einwohner/-in
 
 SOURCE_TYPE: Referat für Stadtentwicklung und Baurecht der Stadt Ingolstadt  # data source  
 source_earliest_available_1: 2019
@@ -31,7 +31,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Dieser Indikator weist die Naherholungsflächen mit Wald in Hektar (ha) je 1000 Einwohner/-innen aus sowie die Naherholungsflächen gesamt in Hektar. Aufgrund des Wachstums der Bevölkerung in den letzten Jahren bei nahezu gleichbleibender Naherholungsfläche ist ein Rückgang der Fläche im Verhältnis zur Einwohnerzahl zu verzeichnen. Berücksichtigt wurden nur im Flächennutzungsplan (FNP) aufgezeigte Naherholungsflächen (723 ha), demnach ist der Bereich des Schafirrsees nicht miteinbezogen.  <br>
+Dieser Indikator weist die Naherholungsflächen mit Wald in m² je Einwohner/-in aus sowie die Naherholungsflächen gesamt in m². Aufgrund des Wachstums der Bevölkerung in den letzten Jahren bei nahezu gleichbleibender Naherholungsfläche ist ein Rückgang der Fläche im Verhältnis zur Einwohnerzahl zu verzeichnen. Berücksichtigt wurden nur im Flächennutzungsplan (FNP) aufgezeigte Naherholungsflächen (723 ha), demnach ist der Bereich des Schafirrsees nicht miteinbezogen.  <br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 K2.6: Naherholung mit ökologischen Aspekten vereinen<br>
