--- a/meta/1-1.md
+++ b/meta/1-1.md
@@ -9,21 +9,25 @@ indicator_sort_order: 01-01-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: bar  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Anzahl Unterbringungen von Obdachlosen   
+computation_units: Prozent   
 data_start_values:  # initialize the field to be shown  
- - field: Unterbringung 
-   value: Unterbringung 
- - field: Unterbringung 
-   value: Vermittlung in eigenen Wohnraum
- - field: Unterbringung 
-   value: Vermittlung in Therapie oder sonstige stat. Einrichtung  
+ - field: Herkunft und Geschlecht 
+   value: Deutsche 
+ - field: Herkunft und Geschlecht 
+   value: Ausländer
+ - field: Herkunft und Geschlecht 
+   value: männlich
+ - field: Herkunft und Geschlecht 
+   value: weiblich
+ - field: Herkunft und Geschlecht 
+   value: gesamt
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: Anzahl Unterbringungen von Obdachlosen. Dazu gehören die Nutzung von Appartements rund um die Uhr, d.h. feste Einquartierung; separate Unterkünfte für Familien mit Minderjährigen; soziale Betreuung durch Kommune; Förderung von Trägern z.B. Straßenambulanz St. Franziskus, SkF (Sozialdienst katholischer Frauen) Notwohnungen
+computation_definitions: Anteil der als untergebracht wohnungslos geltenden Einwohner/-innen an der Gesamtbevölkerung Betreuung durch Kommune; Förderung von Trägern z.B. Straßenambulanz St. Franziskus, SkF (Sozialdienst katholischer Frauen) Notwohnungen
 
 SOURCE_TYPE: <a href="https://www-genesis.destatis.de/genesis//online?operation=table&code=22971-0080&bypass=true&levelindex=0&levelid=1730374033875#abreadcrumb">Statistisches Bundesamt</a>  # data source  
-source_earliest_available_1: 2019
+source_earliest_available_1: 2022
 source_periodicity_1: Jährlich
 
 language: de   
@@ -33,7 +37,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Der Indikator beschreibt mehrere Formen der Unterbringung. Dazu gehören die Nutzung von Appartements rund um die Uhr, d.h. feste Einquartierung; separate Unterkünfte für Familien mit Minderjährigen; soziale Betreuung durch Kommune; Förderung von Trägern z.B. Straßenambulanz St. Franziskus, SkF (Sozialdienst katholischer Frauen) Notwohnungen. Diese Angabe ist eine Stichtagszahl. Diese sagt nicht aus, wie viele Menschen innerhalb eines Jahres eine Notunterkunft in Anspruch genommen haben, sondern lediglich wie viele Menschen jeweils zum 31. Dezember in einer kommunalen Notunterkunft eingewiesen waren. (Fallzahlen jeweils nach Stichtag 31. Dezember). <br>
+Die Stadt Ingolstadt ist durch die Ordnungs- und Polizeigesetze der Länder verpflichtet, unfreiwillig obdachlosen Menschen eine Unterbringung zu gewähren: die sogenannte ordnungsrechtliche Unterbringung. Der Indikator für Ingolstadt. Diese Angabe ist eine Stichtagszahl. Diese sagt nicht aus, wie viele Menschen innerhalb eines Jahres eine Notunterkunft in Anspruch genommen haben, sondern lediglich wie viele Menschen jeweils zum 31. Dezember in einer kommunalen Notunterkunft eingewiesen waren. (Fallzahlen jeweils nach Stichtag 31. Dezember). <br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt:</b><br> 
 V1.1.1: Unterstützung von Menschen in besonderen Lebenslagen<br>
