--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -1,4 +1,4 @@
-1-1-title: Anzahl Unterbringung von Obdachlosen
+1-1-title: Wohnungslosigkeit
 1-2-title: Vergabe von sozial gefördertem Wohnraum
 1-3-title: Mietschuldenprävention
 1-4-1-title: Empfänger/-innen von Hilfe zum Lebensunterhalt und Grundsicherung und bei Erwerbsminderung (SGB XII)
