--- a/meta/1-1.md
+++ b/meta/1-1.md
@@ -24,7 +24,7 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: Anteil der als untergebracht wohnungslos geltenden Einwohner/-innen an der Gesamtbevölkerung Betreuung durch Kommune; Förderung von Trägern z.B. Straßenambulanz St. Franziskus, SkF (Sozialdienst katholischer Frauen) Notwohnungen
+computation_definitions: Anteil der als untergebracht wohnungslos geltenden Einwohner/-innen an der Gesamtbevölkerung
 
 SOURCE_TYPE: <a href="https://www-genesis.destatis.de/genesis//online?operation=table&code=22971-0080&bypass=true&levelindex=0&levelid=1730374033875#abreadcrumb">Statistisches Bundesamt</a>  # data source  
 source_earliest_available_1: 2022
