--- a/meta/11-5.md
+++ b/meta/11-5.md
@@ -9,16 +9,16 @@ indicator_sort_order: 11-05-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Anzahl Personenschaden, Getötete oder Schwerverletzte
+computation_units: Verunklückte / 1.000 EW
 data_start_values:  # initialize the field to be shown  
- - field: Unfall mit 
+ - field: Verunglückte im Verkehr
    value: Getötete oder schwer verletzte 
- - field: Unfall mit 
-   value: Personenschaden 
+ - field: Verunglückte im Verkehr
+   value: Personenschaden
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt
-computation_definitions: Zahl der Verkehrsunfälle mit Personenschaden sowie bei Verkehrsunfällen Getötete oder schwerverletzte
+computation_definitions: Anzahl der Verunglückten im Verkehr nach Personenschaden und schwerverletzte / getötete Personen bei Verkehrsunfällen je 1.000 Einwohner/-innen
 
 SOURCE_TYPE: Amt für Statistik und Stadtforschung der Stadt Ingolstadt  # data source  
 source_earliest_available_1: 2019
@@ -31,7 +31,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Dieser Indikator zeigt die Zahl der Verkehrsunfälle mit Personenschaden sowie bei Verkehrsunfällen Getötete oder Schwerverletzte an.<br>
+Dieser Indikator zeigt die Zahl der Verkehrsunfälle mit Personenschaden sowie bei Verkehrsunfällen Getötete oder Schwerverletzte je 1.000 Einwohner/-innen an.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 N4.4: Verbesserung der Verkehrssicherheit<br>
