--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -86,7 +86,7 @@
 11-2-title: Barrierefreie und inklusive Mobilitätsangebot
 11-3-title: Barrierefreies Wohnen
 11-4-title: Gefahrenzonen in Starkregenkartierung
-11-5-title: Verkehrsunfälle mit Personenschaden
+11-5-title: Verunglückte im Verkehr
 11-6-title: Barrierefreie Spiel- und Freizeitanlagen
 11-7-title: Fertiggestellte Wohngebäude mit erneuerbarer Heizenergie bzw. Fernwärme
 11-8-title: Flächeninanspruchnahme und Flächenneuinanspruchnahme
