--- a/meta/4-3.md
+++ b/meta/4-3.md
@@ -20,7 +20,7 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: Anteil der Kinder unter 3 Jahren, die in Kindertageseinrichtungen betreut werden, an der Anzahl aller Kinder unter 3 Jahren sowie Anteil der Kinder (Deutsch / Ausländer) unter 3 Jahren, die in Kindertageseinrichtungen betreut werden, an der Anzahl aller Kinder nach Deutsch / Ausländer in städtischer Trägerschaft
+computation_definitions: Anteil der Kinder unter 3 Jahren, die in Kindertageseinrichtungen betreut werden, an der Anzahl aller Kinder unter 3 Jahren in städtischer Trägerschaft
 
 SOURCE_TYPE: Jahresbericht Stadt Ingolstadt, Amt für Kinderbetreuung und -bildung, jeweils 1.12. des Jahres und <a href="https://www.statistikdaten.bayern.de/genesis//online?operation=table&code=12411-006z&bypass=true&levelindex=1&levelid=1730379255456#abreadcrumb">Bayerisches Landesamt für Statistik</a>
 
