--- a/meta/4-5.md
+++ b/meta/4-5.md
@@ -9,18 +9,18 @@ indicator_sort_order: 04-05-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Anzahl der Kinder
+computation_units: Prozent
 data_start_values:  # initialize the field to be shown  
  - field: Herkunft 
    value: gesamt
  - field: Herkunft 
-   value: mit Migrationshintergrund
+   value: Ausländer
  - field: Herkunft
-   value: ohne Migrationshintergrund
+   value: Deutsch
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: Anzahl der Kinder in öff. Kindertageseinrichtungen insgesamt und mit / ohne  Migrationshintergrund (zwischen 3 und unter 6 Jahre) in städtischer Trägerschaft
+computation_definitions: Anteil der Kinder unter 3 Jahren, die in Kindertageseinrichtungen betreut werden, an der Anzahl aller Kinder unter 3 Jahren in städtischer Trägerschaft
 
 SOURCE_TYPE: Jahresbericht Stadt Ingolstadt, Amt für Kinderbetreuung und -bildung # data source  
 source_earliest_available_1: 2019
@@ -33,7 +33,9 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Der Indikator zeigt die Anzahl der Kinder in öff. Kindertageseinrichtungen insgesamt und mit / ohne  Migrationshintergrund (zwischen 3 und unter 6 Jahre) an.<br>
+Anteil der Kinder unter 3 Jahren, die in Kindertageseinrichtungen betreut werden, an der Anzahl aller Kinder unter 3 Jahren in städtischer Trägerschaft. Der Ausbau der Kinderbetreuung als kommunale Pflichtaufgabe
+hat zum Ziel, die Bildungschancen der Kinder – unabhängig von Herkunft, Bildungsstand und Einkommen der Eltern – zu erhöhen. So sollen alle Kinder, die in Tageseinrichtungen betreut werden, optimal auf die Grundschule
+vorbereitet werden.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 B2.3: Förderung der Bildungsteilhabe / Bildungsgerechtigkeit und lebenslangem Lernen<br>
