--- a/meta/4-5.md
+++ b/meta/4-5.md
@@ -20,7 +20,7 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: Anteil der Kinder unter 3 Jahren, die in Kindertageseinrichtungen betreut werden, an der Anzahl aller Kinder unter 3 Jahren in städtischer Trägerschaft
+computation_definitions: Anteil der Kinder zwischen 3 und unter 6 Jahre Jahren, die in Kindertageseinrichtungen betreut werden, an der Anzahl aller Kinder zwischen 3 und unter 6 Jahren in städtischer Trägerschaft
 
 SOURCE_TYPE: Jahresbericht Stadt Ingolstadt, Amt für Kinderbetreuung und -bildung # data source  
 source_earliest_available_1: 2019
@@ -33,8 +33,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Anteil der Kinder unter 3 Jahren, die in Kindertageseinrichtungen betreut werden, an der Anzahl aller Kinder unter 3 Jahren in städtischer Trägerschaft. Der Ausbau der Kinderbetreuung als kommunale Pflichtaufgabe
-hat zum Ziel, die Bildungschancen der Kinder – unabhängig von Herkunft, Bildungsstand und Einkommen der Eltern – zu erhöhen. So sollen alle Kinder, die in Tageseinrichtungen betreut werden, optimal auf die Grundschule
+Anteil der Kinder zwischen 3 und unter 6 Jahre Jahren, die in Kindertageseinrichtungen betreut werden, an der Anzahl aller Kinder zwischen 3 und unter 6 Jahren in städtischer Trägerschaft. Der Ausbau der Kinderbetreuung als kommunale Pflichtaufgabe hat zum Ziel, die Bildungschancen der Kinder – unabhängig von Herkunft, Bildungsstand und Einkommen der Eltern – zu erhöhen. So sollen alle Kinder, die in Tageseinrichtungen betreut werden, optimal auf die Grundschule
 vorbereitet werden.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
