--- a/meta/4-9.md
+++ b/meta/4-9.md
@@ -9,8 +9,8 @@ indicator_sort_order: 04-09-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: bar  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Wohnungsnahe Grundversorgung - Grundschule 
-data_start_values: Meter  # initialize the field to be shown  
+computation_units: Meter 
+data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
  - field: Region 
