--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -25,6 +25,7 @@
 3-12-title: Inanspruchname der Früherkennungsmaßnahmen
 3-13-title: Adipositas
 3-14-title: Ambulante Versorgungssituation
+3-15-title: Wohnungsnahe Grundversorgung - Hausarzt
 
 4-1-title: Studierendenanzahl und Anteil ausländischer Studierender
 4-2-title: Aus- und Weiterbildungsangebote für städtische Mitarbeitende
