--- a/meta/3-7.md
+++ b/meta/3-7.md
@@ -9,7 +9,7 @@ indicator_sort_order: 03-07-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Anzahl der Todesfälle von Personen unter 70 Jahren
+computation_units: Todesfälle je 1.000 Einwohner/-innen
 data_start_values:  # initialize the field to be shown  
  - field: Geschlecht 
    value: gesamt 
@@ -21,7 +21,7 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt
-computation_definitions: Anzahl der Todesfälle von Personen unter 70 Jahren
+computation_definitions: Anzahl der Todesfälle von unter 70-Jährigen je 1.000 Einwohner/-innen
 
 SOURCE_TYPE: <a href="https://www.statistikdaten.bayern.de/genesis/online?operation=statistic&levelindex=0&levelid=1723467462443&code=12613#abreadcrumb">Bayer. Landesamt für Statistik</a>   # data source  
 source_earliest_available_1: 2019
@@ -34,7 +34,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Anzahl der Todesfälle von Personen unter 70 Jahren. Zwischen 2020 und 2022 ist eine erhöhte vorzeitige Sterblichkeit festzustellen, die  u.a. auf die Corona-Pandemie zurückzuführen ist. <br> 
+Anzahl der Todesfälle von Personen unter 70 Jahren je 1.000 Einwohner/-innen. Zwischen 2020 und 2022 ist eine erhöhte vorzeitige Sterblichkeit festzustellen, die  u.a. auf die Corona-Pandemie zurückzuführen ist. <br> 
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 N2.5: Ermöglichung einer guten Versorgung (generationenspezifische Angebote) <br>
