--- a/meta/8-5.md
+++ b/meta/8-5.md
@@ -26,7 +26,7 @@ source_periodicity_1: jährlich
 
 language: de   
 published: true 
-reporting_status: complete
+reporting_status: inprogress
  
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
