--- a/meta/4-3.md
+++ b/meta/4-3.md
@@ -14,9 +14,9 @@ data_start_values:  # initialize the field to be shown
  - field: Herkunft 
    value: gesamt 
  - field: Herkunft
-   value: Ausländer
+   value: mit Migrationshintergrund
  - field: Herkunft
-   value: Deutsche
+   value: ohne Migrationshintergrund
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
@@ -36,6 +36,11 @@ reporting_status: complete
 ---
 Anteil der Kinder in öff. Kindertageseinrichtungen (Deutsch / Ausländer) zwischen 0 und unter 3 Jahre in städtischer Trägerschaft. Der Ausbau der Kinderbetreuung als kommunale Pflichtaufgabe
 hat zum Ziel, die Bildungschancen der Kinder – unabhängig von Herkunft, Bildungsstand und Einkommen der Eltern – zu erhöhen. So sollen alle Kinder, die in Kindertageseinrichtungen betreut werden, optimal auf die Grundschule vorbereitet werden.  <br>
+<br>
+<b>Hinweis:</b><br>
+Eine Person hat einen Migrationshintergrund, wenn sie selbst oder mindestens ein Elternteil nicht mit deutscher Staatsangehörigkeit geboren wurde. Im Einzelnen umfasst diese Definition zugewanderte und nicht zugewanderte Ausländerinnen und Ausländer, zugewanderte und nicht zugewanderte Eingebürgerte, (Spät-) Aussiedlerinnen und (Spät-) Aussiedler sowie die als Deutsche geborenen Nachkommen dieser Gruppen.<br>
+<br>
+Die Vertriebenen des Zweiten Weltkrieges haben (gemäß Bundesvertriebenengesetz) einen gesonderten Status; sie und ihre Nachkommen zählen daher nicht zur Bevölkerung mit Migrationshintergrund. <a href="https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Bevoelkerung/Migration-Integration/Glossar/migrationshintergrund.html">(Quelle: Statistisches Bundesamt)</a><br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 B2.3: Förderung der Bildungsteilhabe / Bildungsgerechtigkeit und lebenslangem Lernen<br>
