--- a/meta/4-3.md
+++ b/meta/4-3.md
@@ -34,7 +34,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Anteil der Kinder in öff. Kindertageseinrichtungen (Deutsch / Ausländer) zwischen 0 und unter 3 Jahre in städtischer Trägerschaft. Der Ausbau der Kinderbetreuung als kommunale Pflichtaufgabe
+Anteil der Kinder in öff. Kindertageseinrichtungen (mit / ohne Migrationshintergrund) zwischen 0 und unter 3 Jahre in städtischer Trägerschaft. Er gibt keinen Aufschluss darüber, wie viele Kinder insgesamt in Kindertageseinrichtungen in der Altersgruppe in Ingolstadt untergebracht sind. Der Ausbau der Kinderbetreuung als kommunale Pflichtaufgabe
 hat zum Ziel, die Bildungschancen der Kinder – unabhängig von Herkunft, Bildungsstand und Einkommen der Eltern – zu erhöhen. So sollen alle Kinder, die in Kindertageseinrichtungen betreut werden, optimal auf die Grundschule vorbereitet werden.  <br>
 <br>
 <b>Hinweis:</b><br>
