--- a/meta/8-6.md
+++ b/meta/8-6.md
@@ -47,6 +47,10 @@ Dieser Indikator zeigt die Anzahl der sv-Beschäftigten (Sozialversicherungspfli
 <br>
 Es handelt sich dabei um Wohnortsstatistiken. Festzustellen sind auch weiterhin hohe Zahlen an Eintritten in den Ruhestand oder kurz davor (sv-Beschäftigte über 55 Jahre) sowie ein steigender Anteil an Akademiker/-innen und ein sinkender Anteil an Personen mit anerkanntem Berufsabschluss.<br>
 <br>
+<b>Hinweis:</b><br>
+Zu den Beschäftigten mit ausländischer Staatsangehörigkeit zählen auch Staatenlose und Personen mit ungeklärter Staatsangehörigkeit. Bei den Bevölkerungszahlen gelten hingegen alle Personen als Ausländerinnen/Ausländer, die nicht Deutsche im Sinne des Art. 116 Abs. 1 Grundgesetz (GG) sind. Die leicht unterschiedlichen Datenbasen schränken die Aussagekraft der Beschäftigungszahlen nicht ein.<a href="https://statistik.arbeitsagentur.de/SiteGlobals/Forms/Suche/Einzelheftsuche_Formular.html?topic_f=beschaeftigung-sozbe-bq-heft">(Quelle: Bundesagentur für Arbeit)</a><br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+<br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 N3.7: Sicherung einer qualitativ hochwertigen Beschäftigung<br>
 <br>
