--- a/meta/8-2.md
+++ b/meta/8-2.md
@@ -41,6 +41,8 @@ Dieser Indikator zeigt die sv-Beschäftigtenquote der in Ingolstadt Beschäftigt
 <b>Hinweis:</b><br>
 Zu den Beschäftigten mit ausländischer Staatsangehörigkeit zählen auch Staatenlose und Personen mit ungeklärter Staatsangehörigkeit. Bei den Bevölkerungszahlen gelten hingegen alle Personen als Ausländerinnen/Ausländer, die nicht Deutsche im Sinne des Art. 116 Abs. 1 Grundgesetz (GG) sind. Die leicht unterschiedlichen Datenbasen schränken die Aussagekraft der Beschäftigungsquoten nicht ein.<a href="https://statistik.arbeitsagentur.de/SiteGlobals/Forms/Suche/Einzelheftsuche_Formular.html?topic_f=beschaeftigung-sozbe-bq-heft">(Quelle: Bundesagentur für Arbeit)</a><br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 N3.7: Sicherung einer qualitativ hochwertigen Beschäftigung<br>
 <br>
 <b>BNK-Kernindikator</b>
