--- a/meta/8-7.md
+++ b/meta/8-7.md
@@ -37,7 +37,7 @@ Dieser Indikator zeigt die Summe der Auszubildenden am Standort Ingolstadt nach 
 der Studierenden in Ingolstadt wie im Indikator <a href="https://sdg.nachhaltigkeitsagenda-ingolstadt.de/4-1/">Studierendenanzahl und Anteil ausländischer Studierender</a> zu sehen ist.<br>
 <br>
 <b>Hinweis:</b><br>
-Zu den Beschäftigten mit ausländischer Staatsangehörigkeit zählen auch Staatenlose und Personen mit ungeklärter Staatsangehörigkeit. Bei den Bevölkerungszahlen gelten hingegen alle Personen als Ausländerinnen/Ausländer, die nicht Deutsche im Sinne des Art. 116 Abs. 1 Grundgesetz (GG) sind. Die leicht unterschiedlichen Datenbasen schränken die Aussagekraft der Beschäftigungsquoten nicht ein.<a href="https://statistik.arbeitsagentur.de/DE/Navigation/Grundlagen/Methodik-Qualitaet/Methodenberichte/Uebergreifend/Methodenberichte-Uebergreifend-Nav.html"> (Quelle: Bundesagentur für Arbeit)</a><br>
+Zu den Beschäftigten mit ausländischer Staatsangehörigkeit zählen auch Staatenlose und Personen mit ungeklärter Staatsangehörigkeit. Bei den Bevölkerungszahlen gelten hingegen alle Personen als Ausländerinnen/Ausländer, die nicht Deutsche im Sinne des Art. 116 Abs. 1 Grundgesetz (GG) sind.<a href="https://statistik.arbeitsagentur.de/DE/Navigation/Grundlagen/Methodik-Qualitaet/Methodenberichte/Uebergreifend/Methodenberichte-Uebergreifend-Nav.html"> (Quelle: Bundesagentur für Arbeit)</a><br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 W1.1: Fachkräftegewinnung und -sicherung <br>
