--- a/meta/10-4.md
+++ b/meta/10-4.md
@@ -56,6 +56,9 @@ Sozialversicherungspflichtig Beschäftigte in Ingolstadt nach höchstem erreicht
 <b>Hinweis:</b> Bei diesen Daten handelt es sich um Daten des Bayerischen Landesamt für Statistik. Die Bundesagentur für Arbeit hat im Dezember 2023 die Arbeitsortdaten für den Zeitraum ab Januar 2018 und die
 Wohnortdaten ab Januar 2013 revidiert. Die Revision wurde hier noch nicht vollzogen. Daher kommt es zu geringfügigen Abweichungen zu Ergebnissen in Veröffentlichungen der Bundesagentur für Arbeit.<br>
 <br>
+Zu den Beschäftigten mit ausländischer Staatsangehörigkeit zählen auch Staatenlose und Personen mit ungeklärter Staatsangehörigkeit. Bei den Bevölkerungszahlen gelten hingegen alle Personen als Ausländerinnen / Ausländer, die nicht Deutsche im Sinne des Art. 116 Abs. 1 Grundgesetz (GG) sind.<a href="https://statistik.arbeitsagentur.de/DE/Navigation/Grundlagen/Methodik-Qualitaet/Methodenberichte/Uebergreifend/Methodenberichte-Uebergreifend-Nav.html"> (Quelle: Bundesagentur für Arbeit)</a>.<br>
+
+<br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 B2.3: Förderung der Bildungsteilhabe / Bildungsgerechtigkeit und lebenslangem Lernen<br>
 <br>
