--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -134,3 +134,4 @@
 17-1-title: Anzahl Partnerschaften mit Kommunen aus dem Globalen Süden
 17-2-title: Anzahl Projekte mit den Partnerstädten
 17-3-title: Anzahl Projekte mit migrantischen Organisationen
+17-4-title: Projekte mit Partnern in Ländern des globalen Südens
