--- a/meta/17-4.md
+++ b/meta/17-4.md
@@ -9,7 +9,7 @@ indicator_sort_order: 17-04-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Projekte mit Partnern in Ländern des globalen Südens 
+computation_units: Anzahl der innerhalb von Partnerschaften in Ländern des Globalen Südens durchgeführten Projekte je 1.000 Einwohner*innen
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt
@@ -18,10 +18,9 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: DAC-Länder
-computation_definitions: Anzahl der zeitlich und sachlich begrenzten Partnerschaften mit Partnern in DAC-Ländern je 1.000 Einwohner*innen
+computation_definitions: Anzahl der zeitlich und sachlich begrenzten Partnerschaften mit Partnern in DAC-Ländern je 1.000 Einwohner/-innen
 
-SOURCE_TYPE: <a href="https://www.ingolstadt.de/Kultur/Ingolstadt-international/Partnerst%C3%A4dte/">Amt für internationale Beziehungen und Kulturverwaltung - Internationale Beziehungen</a> und 
-<a href="https://www.statistikdaten.bayern.de/genesis//online?operation=table&code=12111-101z&bypass=true&levelindex=1&levelid=1730794462869#abreadcrumb">Bayerisches Landesamt für Statistik</a>  # data source  
+SOURCE_TYPE: <a href="https://www.ingolstadt.de/Kultur/Ingolstadt-international/Partnerst%C3%A4dte/">Amt für internationale Beziehungen und Kulturverwaltung - Internationale Beziehungen</a> und <a href="https://www.statistikdaten.bayern.de/genesis//online?operation=table&code=12111-101z&bypass=true&levelindex=1&levelid=1730794462869#abreadcrumb">Bayerisches Landesamt für Statistik</a>  # data source  
 source_earliest_available_1: 2014
 source_periodicity_1: Jährlich
 
