--- a/meta/17-4.md
+++ b/meta/17-4.md
@@ -42,7 +42,7 @@ nachhaltigen solidarischen Hilfestellung für die Gemeinde verpflichten.<br>
 2020 und 2021 wurde die Partnerstadt Kragujevac in Serbien zudem durch den Ankauf eines PCR-Geräts durch die Stadt Kragujevac im Rahmen des “Kommunalen Corona-Solidarpakets” 
 der Servicestelle Kommunen in der Einen Welt (SKEW) / Engagement Global gGmbH von der Stadt Ingolstadt unterstützt.<br>
 <br>
-Der in der Grafik sichtbare Verlauf nach unten über die letzten Jahre ist darauf zurückzuführen, dass sich die Stadt Ingolstadt weiterhin in der Gemeinde Legmoin engagiert bei zunehmender Bevökkerung in Ingolstadt. Der 
+Der in der Grafik sichtbare Verlauf nach unten über die letzten Jahre ist darauf zurückzuführen, dass sich die Stadt Ingolstadt weiterhin in der Gemeinde Legmoin engagiert bei zunehmender Bevölkerung in Ingolstadt. Der 
 Ausschlag nach oben 2021 / 2021 ist auf das Projekt im Rahmen des “Kommunalen Corona-Solidarpakets” der Servicestelle Kommunen in der Einen Welt (SKEW) zurückzuführen.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
