--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -122,6 +122,7 @@
 15-3-title: Vertrags-Naturschutzflächen
 15-4-title: Renaturierte Flächen in ha
 15-5-title: Waldflächenbilanz
+15-6-title: Gesamtheit aller Eingriffe des Menschen in den Naturhaushalt (Hemerobieindex)
 
 16-1-title: Anzahl Ehrenamtliche
 16-2-title: Anzahl und Art der informellen Bürger/-innenbeteiligungsverfahren
