--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -122,7 +122,7 @@
 15-3-title: Vertrags-Naturschutzflächen
 15-4-title: Renaturierte Flächen in ha
 15-5-title: Waldflächenbilanz
-15-6-title: Gesamtheit aller Eingriffe des Menschen in den Naturhaushalt (Hemerobieindex)
+15-6-title: Landschaftsqualität
 15-7-title: Stickstoffüberschuss in der Landwirtschaft
 
 16-1-title: Anzahl Ehrenamtliche
